@@ -11,13 +11,13 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: cmdMZ.test,v 1.11 2002/07/04 21:47:59 dkf Exp $
+# RCS: @(#) $Id: cmdMZ.test,v 1.12 2002/07/19 08:36:51 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
     namespace import -force ::tcltest::*
 }
-set tcltest::testConstraints(notLinux) \
+set tcltest::testConstraints(nonLinuxOnly) \
 	[expr {![string equal Linux $tcl_platform(os)]}]
 
 # Tcl_PwdObjCmd
@@ -31,7 +31,7 @@ test cmdMZ-1.2 {Tcl_PwdObjCmd: simple pwd} {
 test cmdMZ-1.3 {Tcl_PwdObjCmd: simple pwd} {
     expr [string length pwd]>0
 } 1
-test cmdMZ-1.4 {Tcl_PwdObjCmd: failure} {unixOnly notLinux} {
+test cmdMZ-1.4 {Tcl_PwdObjCmd: failure} {unixOnly nonLinuxOnly} {
     # We don't want this test to run on Linux because they do a
     # permissions caching trick which causes this to fail.  The
     # caching is incorrect, but we have no control over that.
